crates/wdl-analysis/tests/validation/int-out-of-range/source.errors
error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range/source.wdl:10:12
   │
10 │         d: 0x8000000000000000
   │            ^^^^^^^^^^^^^^^^^^ this literal integer is not in range

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range/source.wdl:11:12
   │
11 │         e: 9223372036854775808
   │            ^^^^^^^^^^^^^^^^^^^ this literal integer is not in range

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range/source.wdl:13:12
   │
13 │         g: -9223372036854775809
   │            ^^^^^^^^^^^^^^^^^^^^ this literal integer is not in range

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range/source.wdl:19:13
   │
19 │     Int d = 0x8000000000000000
   │             ^^^^^^^^^^^^^^^^^^ this literal integer is not in range

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range/source.wdl:20:13
   │
20 │     Int e = 9223372036854775808
   │             ^^^^^^^^^^^^^^^^^^^ this literal integer is not in range

error: literal integer exceeds the range for a 64-bit signed integer (-9223372036854775808..=9223372036854775807)
   ┌─ tests/validation/int-out-of-range/source.wdl:22:13
   │
22 │     Int g = -9223372036854775809
   │             ^^^^^^^^^^^^^^^^^^^^ this literal integer is not in range

